# sonstige

./: Cargo.toml  README.md  Readme.md  ackerlehrpfad.txt  heilpflanzen.txt  heilpflanzen_updated.txt  historische.txt  nginx_rules Streuobstwiese.txt  nginx_rules ackerlehrpfad.txt  nginx_rules historische.txt  nginx_rules sehenswürdigkeiten.txt  nginx_rules stolpersteine.txt  nginx_rules touren 1.txt  nginx_rules_Streuobstwiese.txt  old.rs  result.txt  result_ackerlehrpfad.txt  result_heilpflanzen.txt  result_historische.txt  result_sehenswürdigkeiten.txt  result_stolpersteine.txt  result_streuobst.txt  result_touren.txt  sehenswürdigkeiten.txt  stolpersteine.txt  streuobst.txt  touren.txt
hs_stats/: Cargo.toml  Dockerfile  output.csv  start.sh
hs_stats/my_output/: output.csv
hs_stats/src/: main.rs
src/: main.rs
timeline/: package-lock.json
timeline/app/timeline/: page.tsx
timeline/components/: BucketTest.tsx  Timeline.tsx
yew_test/: Cargo.toml
yew_test/src/: main.rs
yew_test/src/components/: Grid.rs
