[package]
name = "hs_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
csv = "1.3.0"
image = "0.24.7"
reqwest = { version = "0.11", features = ["blocking"] }
rusty-tesseract = "1.1.9"

